--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
-        run: terraform init -backend-config=dev.backend.config
+        run: terraform init -backend-config=dev.backend.confi
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
