changes in yml and backend file

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,6 +29,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
+        working-directory: ./infra
         run: terraform init -backend-config=dev.backend.conf
 
       - name: Terraform Plan
