--- a/dev.backend.conf
+++ b/dev.backend.conf
@@ -1,6 +1,7 @@
-  resource_group_name   = "terraform-state"
-  storage_account_name  = "opellastatefilesa"
+
+resource_group_name   = "az-900"
+  storage_account_name  = "dumystorageaccount"
   container_name        = "dev"
   key                   = "dev.terraform.tfstate"
   use_azuread_auth      = true
-  subscription_id      = "be494ed4-9959-4e73-add4-e2017c56dcb6"
+  subscription_id      = "23804002-cbd4-473c-972d-2fffa924c8aa"
